# crop_mcp

./: .coverage  .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md  bootstrap.py  lint.sh  pyproject.toml  server.py  setup.sh
.claude/rules/: vision-tools-awareness.md
.github/workflows/: check.yml  ci.yml
docs/: architecture.md  testing.md
docs/adr/: 001-keep-custom-kmeans.md
docs/meta/: styleguide.md
docs/plans/: vision-tools-mcp.md
tests/: conftest.py  generate_live_images.py  live_qa_checklist.md  test_bootstrap.py  test_cleanup.py  test_colors.py  test_contrast.py  test_crop.py  test_grid.py  test_integration.py  test_server.py  test_validate_region.py  test_validators.py
tools/: __init__.py  colors.py  contrast.py  crop.py  grid.py  validators.py
